[package]
name = "purpleair_exporter"
version = "0.2.0"
authors = ["David Wilemski <david@wilemski.org>"]
repository = "https://github.com/davidwilemski/purpleair_exporter"
license = "MIT"
license-file = "LICENSE.txt"
edition = "2018"

[dependencies]
axum = "0.1.3"
env_logger = "0.9"
http = "0.2"
hyper = "0.14"
lazy_static = "1.4.0"
log = "0.4"
prometheus = "0.12.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
